--- a/ui/.vscode/settings.json
+++ b/ui/.vscode/settings.json
@@ -1,6 +1,13 @@
 {
     "marscode.chatLanguage": "cn",
     "files.associations": {
-        "ui.h": "c"
+        "ui.h": "c",
+        "string_view": "cpp",
+        "array": "cpp",
+        "deque": "cpp",
+        "string": "cpp",
+        "unordered_map": "cpp",
+        "vector": "cpp",
+        "initializer_list": "cpp"
     }
 }
